fix: resolve 5 post-deployment issues in PocketFM CE fork
1. Add 15 missing EE enum constants to AclPermission.java as stubs so
   MongoDB documents populated by EE can deserialize without crashing.
   Also add fault-tolerant StringToAclPermissionConverter for future safety.

2. Add SAML 2.0 config form (entity ID, metadata URL, SSO URL, cert)
   to authentication settings page — previously showed empty page.

3. Add null-safety guards in PluginServiceCEImpl for plugins not present
   in CE classpath — prevents NPE on home page datasource templates.

4. Hide EE-only upgrade pages (Access Control, Audit Logs, Branding,
   Provisioning) from admin sidebar — they only showed upgrade prompts.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>